# cmake_bits

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bits.cmake  create_release.py
dependency_utils/: CMakeLists.txt
external_project/: CMakeLists.txt  extern_project.cmake  template.in
external_project_utils/: CMakeLists.txt  template.in
git_utils/: CMakeLists.txt
package_utils/: CMakeLists.txt
system_utils/: CMakeLists.txt  ]
tui_utils/: CMakeLists.txt
version_utils/: CMakeLists.txt
wget_utils/: CMakeLists.txt
